--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
 
-<h1>Logan Subdomain!</h1>
-  <h2>I'm working on making this an "About the creator" section</h2>
+<h1>Owner Subdomain!</h1>
+  <h2>I'm working on making this a contact card type page. </h2>
 
 </body>
 </html>
