--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>sk</title>
+<title>About me</title>
 <style>
   body, html {
     margin: 0;
@@ -11,10 +11,6 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-  }
-  embed {
-    width: 100%;
-    height: 100%;
   }
 </style>
 </head>
